--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "scripts": {
     "lint:fix": "prettier */*.js \"*/**/*{.js,.ts}\" -w",
     "lint": "prettier */*.js \"*/**/*{.js,.ts}\" --check",
-    "test": "ts-mocha -p ./tsconfig.json -t 1000000 'tests/**/*.ts'"
+    "test": "ts-mocha -p ./tsconfig.json -t 1000000 'tests/**/*.ts'",
+    "build": "anchor build"
   },
   "type": "module",
   "dependencies": {
