--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "type": "module",
   "dependencies": {
     "@coral-xyz/anchor": "^0.32.1",
+    "@solana/spl-token": "0.4.14",
     "anchor-litesvm": "0.2.1",
     "borsh": "^2.0.0",
     "litesvm": "0.3.3",
